force-app/main/default/objects/Warranty_Document__c/Warranty_Document__c.object-meta.xml
<CustomObject>
    <description>Tracks receipt, serial number, damage, and diagnostic documents for warranty claims.</description>
    <label>Warranty Document</label>
    <nameField>
        <displayFormat>WD-{000000}</displayFormat>
        <label>Warranty Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>