force-app/main/default/objects/Warranty_Document__c/fields/AI_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence_Score__c</fullName>
    <label>AI Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>