force-app/main/default/objects/Warranty_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Receipt</fullName>
                <default>true</default>
                <label>Purchase Receipt</label>
            </value>
            <value>
                <fullName>Serial Number Photo</fullName>
            </value>
            <value>
                <fullName>Damage Photo</fullName>
            </value>
            <value>
                <fullName>Diagnostic Report</fullName>
            </value>
            <value>
                <fullName>Shipping Label</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>