force-app/main/default/objects/Warranty_Document__c/fields/Extracted_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Purchase_Date__c</fullName>
    <label>Extracted Purchase Date</label>
    <type>Date</type>
</CustomField>