force-app/main/default/objects/Warranty_Document__c/fields/Extracted_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Serial_Number__c</fullName>
    <label>Extracted Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>