force-app/main/default/objects/Warranty_Document__c/fields/Source_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Name__c</fullName>
    <label>Source File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>