force-app/main/default/objects/Warranty_Document__c/fields/Warranty_Claim__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim__c</fullName>
    <label>Warranty Claim</label>
    <referenceTo>Warranty_Claim__c</referenceTo>
    <relationshipLabel>Warranty Documents</relationshipLabel>
    <relationshipName>Warranty_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>